<resources>
    <string name="app_name">HowManyDays</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="days">日</string>
    <string name="months">ヶ月</string>
    <string name="years">年</string>
    <string name="add_date">日付の追加</string>
    <string name="date_name">日付のタイトル</string>
    <string name="hint_input_name">この日に付ける名前を入力</string>
    <string name="start_date">計測開始日</string>
    <string name="empty_date">-/-/-</string>
    <string name="set_date">日付を指定</string>
    <string name="unit_style">表示形式</string>
    <string name="cancel">キャンセル</string>
    <string name="make">作成</string>
    <string name="delete_date">日付データの削除</string>
    <string name="ask_delete">日付のデータを削除しますか？</string>
    <string name="no_name">タイトル未入力</string>
    <string name="put_name">日付のタイトルを入力してください</string>
    <string name="not_edit">データに変更がありません</string>
    <string name="delete">削除</string>
    <string name="edit">更新</string>
</resources>