<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HowManyDays.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.HowManyDays.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            style="@style/input_title"
            android:layout_marginTop="0dp"
            android:text="@string/date_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_input_name"
            android:autofillHints="@string/hint_input_name"
            android:textColor="@color/white"
            android:textColorHint="@color/very_light_gray" />

        <TextView
            style="@style/input_title"
            android:text="@string/start_date" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_date"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/tv_set_date"
                style="@style/textButton"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ripple_dark_gray"
                android:text="@string/set_date"/>
        </LinearLayout>

        <TextView
            style="@style/input_title"
            android:text="@string/unit_style" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <RadioGroup
                android:id="@+id/rg_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_days"
                    style="@style/radioButton_unit"
                    android:text="@string/days"/>

                <RadioButton
                    android:id="@+id/rb_months"
                    style="@style/radioButton_unit"
                    android:text="@string/months"/>

                <RadioButton
                    android:id="@+id/rb_years"
                    style="@style/radioButton_unit"
                    android:text="@string/years"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/textButton"
                android:background="@drawable/ripple_dark_gray"
                android:text="@string/cancel"/>

            <TextView
                android:id="@+id/tv_delete"
                style="@style/textButton"
                android:layout_marginStart="16dp"
                android:background="@drawable/ripple_dark_gray"
                android:text="@string/delete"/>

            <TextView
                android:id="@+id/tv_edit"
                style="@style/textButton"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ripple_dark_gray"
                android:text="@string/edit"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>